--- a/games.html
+++ b/games.html
@@ -24,6 +24,8 @@
 <p>I learn the most building and collaborating with others. Here are some games I've built with friends.</p>
 <br>
 <p> <a href="https://jfulghum.github.io/teaSet/">Tea Set</a></p>
+  <img src="https://photos.google.com/photo/AF1QipNd7J5mcTyebrLNQT5dG7oH20mbqRsSXdx4h5Tp">
+
 
 <p>Based on the classic matching card game "Set", Tea Set was built over three days by Ralph Salazar, Guilia Lake and Johanna Fulghum. </p>
 <br>
