--- a/games.html
+++ b/games.html
@@ -30,6 +30,8 @@
 <p>Based on the classic matching card game "Set", Tea Set was built over three days by Ralph Salazar, Guilia Lake and Johanna Fulghum. </p>
 <br>
   <p><a href="https://jfulghum.github.io/Vanilla-Mastermind/">Mastermind</a> </p>
+  
+    <img src="https://lh3.googleusercontent.com/CIXWVxs2B23YGEkPj5K9BVAOyeikEMp98qQ6hWHMb9XdP6aMinQ_m0y-9Okhdh38Ql__FNkYCi4y0tP0ys6dVMN5m952WcnHlMj7iEgEGfPHW4T6NVef9JVvQJqUPzj8th3CuxhboX2nad_fXTVWYSnT1mnnlt8A2UtPwFwvzdDY9kvoOpt5xmBl5BliIZZsv5X4tg0W8q7kvzeic-7rMhNTeGF10rAaaYaiiIlkXkzFOsqZlSXX_y4-UkZQf7mAzkzQJJqAMuVpVjqV0DNKlRdCs69g5-waVSFZeQi_avNS3vN2nUz6aNNfdtjgVFFoezvdeXVYEqncmryvCcJ8kU4eG5_s-iO2M4-NGd5Ov0GVps6XTqN1pOg4_2YaT3JBWz47Q7zek5CwIa9B-F0nZhFZbiv4dzf_KYe2VJrcYdP6ABWarIKD02iJPe4LKb5_Jh0sNny4j-yVgd2ibD6RYYYpi9RecbYp71N8V1e3v2XEDd84sebYz3me6l-Ppw3WRTkJtp9xdHzYLy6Bl2Y7kpvApLByBgX0IthlPvL9ZavxN21Qd5xEgaw5vk0jz_ci5f8Yafdhl8BOFa9Z15CiePblPglnx21roefGjeWDOQ8EqA_SL0PJ14fIgHV3fXHo1rU0XIzMnJz33Jv5xWtPZBEaFE8jXPZbp287A1uFO3LMuMzVpOjNphDqMZvy4Fteh-Yzqv586y0Zd5b0FWSdhtQw=w567-h590-no?authuser=0" width="200" height="40" >
 <p>This Mastermind game was created by Giulia Lake and Johanna Fulghum using vanilla Javascript, with jasmine as our test suite.
 </p>
   <br>
