--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
 <div>
 <h2>Welcome.</h2>
 <div class="intro">
-<p>My name is Johanna Fulghum, and I'm an writer, economist, and engineer living in Denver, CO. </p>
+<p>My name is Johanna Fulghum, and I'm a writer, economist, and engineer living in Denver, CO. </p>
   
 
   <br>
