--- a/home.html
+++ b/home.html
@@ -23,13 +23,13 @@
 <div>
 <h2>Welcome.</h2>
 <div class="intro">
-<p>My name is Johanna Fulghum, and I'm a writer, economist, and engineer living in Denver, CO. </p>
+<p>My name is Johanna Fulghum. I'm a writer, economist, and engineer living in Denver, CO. </p>
   
 
   <br>
 <p>One day in January 2020 I was feeling so inspired by Susan Fowler's <a href="https://www.susanrigetti.com/reading-list">reading list</a> that I decided to create my <a href="http://johannafulghum.com/">own.</a></p>
   <br>
-  <p>A little about me, I work as an operations engineer at a healthcare start-up based in New York City. </br>
+  <p>I work as an backend software engineer at a software company based in Denver, CO. </br>
     Before moving to New York, I worked as an economist for almost four years in Washington D.C. and I still feel like one at heart.</br>
   </br>
   
