--- a/quotes.html
+++ b/quotes.html
@@ -78,6 +78,13 @@ Writing is thinking, and thinking is hard work.
  <p><li>"Beyond the mountain is another mountain." 
    <br> - Haitian proverb </li> </p> 
 <div>
+  
+   <p><li>"How should we like it for stars to burn
+     With a passion for us we could not return?
+     If equal affection cannot be,
+     Let the more loving one be me." 
+   <br> - W. H. Auden </li> </p> 
+<div>
 
 <!--  <p class="quote">
   "It is very hard to fail completely if you aim high enough"
