--- a/quotes.html
+++ b/quotes.html
@@ -49,11 +49,11 @@
      <br> 
     <div>
   
-   <p><li>"How should we like it for stars to burn
-     With a passion for us we could not return?
-     If equal affection cannot be,
-     Let the more loving one be me." 
-   <br> - W. H. Auden </li> </p> 
+   <p><li>"How should we like it for stars to burn <br>
+     With a passion for us we could not return? <br>
+     If equal affection cannot be, <br>
+     Let the more loving one be me." <br>
+    - W. H. Auden </li> </p> 
 <div>
     <br> 
    <p class="quote">
