--- a/quotes.html
+++ b/quotes.html
@@ -27,7 +27,7 @@
 
    <p class="quote">
  <li> "I didn't take the easy road, Oh I couldn't find it <br> 
-    So I took one of my own, and I'm gonna ride it."  <br> 
+    So I built one of my own, and I'm gonna ride it."  <br> 
    - Emily Nenni, Long Game </li>
 
 <div>
