--- a/home.html
+++ b/home.html
@@ -29,11 +29,11 @@
   <br>
 <p>One day in January 2020 I was feeling so inspired by Susan Fowler's <a href="https://www.susanrigetti.com/reading-list">reading list</a> that I decided to create my <a href="http://johannafulghum.com/">own.</a></p>
   <br>
-  <p>These days I work as an backend software engineer at a software company based in Denver, CO. I also host a weekly coffee shop meeup called "Deep Learning in Denver", where try to replicate the incredible programming meetups that taught me so much in New York City from 2017-2020. Before my stint in NYC, I worked as an economist for almost four years in Washington D.C, and I still feel like one at heart.</br>
+  <p>These days I work as an backend software engineer at a software company based in Denver, CO. I also host a weekly coffee shop meetup called "Deep Learning in Denver", where I try to replicate the incredible programming meetups that taught me so much in New York City from 2017-2020. Before my stint in NYC, I worked as an economist for almost four years in Washington D.C, and I still feel like one at heart.</br>
   </br>
   
-I volunteer with <a href="https://codenation.org/">Code Nation</a> to teach web development to high schoolers in the Lower East Side twice a week. </br>
-  Working with the kids both inspired me and taught me how to create this site. </br>
+ I'm also grateful for all I learned volunteering at <a href="https://codenation.org/">Code Nation</a> to Lower East Side high schoolers. </br>
+  Working with those students both inspired me and taught me how to create this site. </br>
 </p>
     <br>
 <p>I have million hobbies. A few of them are soccer, rock climbing, and mountain biking.</p>
