--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
   <br>
 <p>One day in January 2020 I was feeling so inspired by Susan Fowler's <a href="https://www.susanrigetti.com/reading-list">reading list</a> that I decided to create my <a href="http://johannafulghum.com/">own.</a></p>
   <br>
-  <p>These days I work as an backend software engineer in Denver, CO. <br>
+  <p>These days I work as an backend software engineer in Denver, CO. <br> <br>
 I also host a weekly coffee shop meetup called "Deep Learning in Denver", where I try to replicate the incredible programming meetups that taught me so much in New York City from 2017-2020. 
      <br>Before my stint in NYC, I worked as an economist for almost four years in Washington D.C, and I still feel like one at heart.</br>
   </br>
