--- a/home.html
+++ b/home.html
@@ -31,13 +31,13 @@
   <br>
   <p>These days I work as an backend software engineer in Denver, CO. <br> <br>
 I also host a weekly coffee shop meetup called "Deep Learning in Denver", where I try to replicate the incredible programming meetups that taught me so much in New York City from 2017-2020. 
-     <br>Before my stint in NYC, I worked as an economist for almost four years in Washington D.C, and I still feel like one at heart.</br>
+     <br><br>Before my stint in NYC, I worked as an economist for almost four years in Washington D.C, and I still feel like one at heart.</br>
   </br>
   
  Shoutout to the <a href="https://codenation.org/">Code Nation</a> Lower East Side high schoolers -   <br> 
   Working with those students both inspired me and taught me how to create this site. </br>
 </p>
     <br>
-<p>I have million hobbies. A few of them are soccer, rock climbing, and mountain biking.</p>
+<p>I have million hobbies. A few of them are soccer, rock climbing, and learning languages.</p>
     <br> 
   </div>
