--- a/home.html
+++ b/home.html
@@ -38,6 +38,6 @@ I also host a weekly coffee shop meetup called "Deep Learning in Denver", where 
   Working with those students both inspired me and taught me how to create this site. </br>
 </p>
     <br>
-<p>I have million hobbies. A few of them are soccer, rock climbing, and learning languages.</p>
+<p>I have million hobbies. A few of them are soccer, rock climbing, languages, and mountain biking. )</p>
     <br> 
   </div>
