--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
 </div>
 
   <h2 class="name">Johanna Fulghum</h2>
-<!-- <div class="tagline">Writer, Economist, Engineer</div> -->
+
 
 
 <div>
@@ -38,6 +38,6 @@
   Working with those students both inspired me and taught me how to create this site. </br>
 </p>
     <br>
-<p>I have million hobbies. A few of them are soccer, rock climbing, languages, and mountain biking. )</p>
+<p>I have million hobbies. A few of them are soccer, rock climbing, languages, and mountain biking.</p>
     <br> 
   </div>
