--- a/home.html
+++ b/home.html
@@ -1,43 +1,32 @@
-
 <!doctype html>
 <head>
-  <title> Johanna Fulghum </title>
-  <link rel="stylesheet" type="text/css" href="style.css" />
-  <link href="https://fonts.googleapis.com/css?family=Gelasio|Ibarra+Real+Nova&display=swap" rel="stylesheet">
-
+   <title> Johanna Fulghum </title>
+   <link rel="stylesheet" type="text/css" href="style.css" />
+   <link href="https://fonts.googleapis.com/css?family=Gelasio|Ibarra+Real+Nova&display=swap" rel="stylesheet">
 </head>
 <body>
-
-<div class='menu-container'>
-  <a class="nav-bar" href="https://jfulghum.github.io/writing/home.html">Home</a> 
-  <a class="nav-bar"href="https://jfulghum.github.io/writing/games.html">Games</a> 
-  <a class="nav-bar"href="https://jfulghum.github.io/writing/medium.html">Writing</a> 
-  <a class="nav-bar"href="https://jfulghum.github.io/writing/">Reading List</a>
-  <a class="nav-bar"href="https://jfulghum.github.io/writing/quotes.html">Favorite Quotes</a>
-</div>
-
-  <h2 class="name">Johanna Fulghum</h2>
-
-
-
-<div>
-<h2>Welcome.</h2>
-<div class="intro">
-<p>My name is Johanna Fulghum. I work as an backend software engineer in Denver, CO. </p>
-  
-
-  <br>
-<p>One day in January 2020 I was feeling so inspired by Susan Fowler's <a href="https://www.susanrigetti.com/reading-list">reading list</a> that I decided to create my <a href="http://johannafulghum.com/">own.</a></p>
-  <br>
-
-<p>I host a weekly coffee shop meetup called "Deep Learning in Denver", where I try to replicate the incredible programming meetups that taught me so much in New York City from 2017-2020. 
-     <br><br>Before my stint in NYC, I worked as an economist for almost four years in Washington D.C, and I still feel like one at heart.</br>
-  </br>
-  
- Shoutout to the <a href="https://codenation.org/">Code Nation</a> Lower East Side high schoolers -   <br> 
-  Working with those students both inspired me and taught me how to create this site. </br>
-</p>
-    <br>
-<p>I have million hobbies. A few of them are soccer, rock climbing, languages, and mountain biking.</p>
-    <br> 
-  </div>
+   <div class='menu-container'>
+      <a class="nav-bar" href="https://jfulghum.github.io/writing/home.html">Home</a> 
+      <a class="nav-bar"href="https://jfulghum.github.io/writing/games.html">Games</a> 
+      <a class="nav-bar"href="https://jfulghum.github.io/writing/medium.html">Writing</a> 
+      <a class="nav-bar"href="https://jfulghum.github.io/writing/">Reading List</a>
+      <a class="nav-bar"href="https://jfulghum.github.io/writing/quotes.html">Favorite Quotes</a>
+   </div>
+   <h2 class="name">Johanna Fulghum</h2>
+   <div>
+   <h2>Welcome.</h2>
+   <div class="intro">
+      <p>My name is Johanna Fulghum. I work as an backend software engineer in Denver, CO. </p>
+      <br>
+      <p>One day in January 2020 I was feeling so inspired by Susan Fowler's <a href="https://www.susanrigetti.com/reading-list">reading list</a> that I decided to create my <a href="http://johannafulghum.com/">own.</a>
+         <br>
+         I host a weekly coffee shop meetup called "Deep Learning in Denver", where I try to replicate the incredible programming meetups that taught me so much in New York City from 2017-2020. 
+         <br><br>Before my stint in NYC, I worked as an economist for almost four years in Washington D.C, and I still feel like one at heart.</br>
+         </br>
+         Shoutout to the <a href="https://codenation.org/">Code Nation</a> Lower East Side high schoolers -   <br> 
+         Working with those students both inspired me and taught me how to create this site. </br>
+         <br>
+         I have million hobbies. A few of them are soccer, rock climbing, languages, and mountain biking.
+      </p>
+      <br> 
+   </div>
