--- a/home.html
+++ b/home.html
@@ -16,17 +16,21 @@
    <div>
    <h2>Welcome.</h2>
    <div class="intro">
-      <p>My name is Johanna Fulghum. I work as an backend software engineer in Denver, CO. </p>
+      <p>My name is Johanna Fulghum. I work as an backend software engineer in Denver, CO.
       <br>
-      <p>One day in January 2020 I was feeling so inspired by Susan Fowler's <a href="https://www.susanrigetti.com/reading-list">reading list</a> that I decided to create my <a href="http://johannafulghum.com/">own.</a>
-         <br>
-         I host a weekly coffee shop meetup called "Deep Learning in Denver", where I try to replicate the incredible programming meetups that taught me so much in New York City from 2017-2020. 
-         <br><br>Before my stint in NYC, I worked as an economist for almost four years in Washington D.C, and I still feel like one at heart.</br>
-         </br>
-         Shoutout to the <a href="https://codenation.org/">Code Nation</a> Lower East Side high schoolers -   <br> 
-         Working with those students both inspired me and taught me how to create this site. </br>
-         <br>
-         I have million hobbies. A few of them are soccer, rock climbing, languages, and mountain biking.
+      One day in January 2020 I was feeling so inspired by Susan Fowler's <a href="https://www.susanrigetti.com/reading-list">reading list</a> that I decided to create my <a href="http://johannafulghum.com/">own.</a>
+      <br>
+      I host a weekly coffee shop meetup called "Deep Learning in Denver", where I try to replicate the incredible programming meetups that taught me so much in New York City from 2017-2020. 
+      <br>
+      <br>Before my stint in NYC, I worked as an economist for almost four years in Washington D.C, and I still feel like one at heart.</br>
+      </br>
+      <br>
+      Shoutout to the <a href="https://codenation.org/">Code Nation</a> Lower East Side high schoolers -
+      </br> 
+      <br>Working with those students both inspired me and taught me how to create this site. </br>
+      <br>
+      I have million hobbies. A few of them are soccer, rock climbing, languages, and mountain biking.
+      </br>
       </p>
       <br> 
    </div>
