--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
       Shoutout to the <a href="https://codenation.org/">Code Nation</a> Lower East Side high schoolers -
       <br>Working with those students both inspired me and taught me how to create this site. </br>
       <br>
-      I have million hobbies. A few of them are soccer, rock climbing, languages, and mountain biking.
+      I have million hobbies. A few of them are soccer, rock climbing, the struggle that is learning new languages, and mountain biking.
       </br>
       </p>
       <br> 
