--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
       <p>My name is Johanna Fulghum. One day in January 2020 I was feeling so inspired by Susan Fowler's <a href="https://www.susanrigetti.com/reading-list">reading list</a> that I decided to create my <a href="http://johannafulghum.com/">own.</a>
       <br>
       <br>
-      These days I work as an backend software engineer in Denver, CO. 
+      Right now I'm working as an backend software engineer in Denver, CO. 
           </br>
       <br>I also host a weekly coffee shop meetup called "Deep Learning in Denver", where I try to replicate the incredible programming meetups that taught me so much in New York City from 2017-2020. 
       </br>
@@ -28,7 +28,6 @@
       <br>
       Shoutout to the <a href="https://codenation.org/">Code Nation</a> Lower East Side high schoolers -
       <br>Working with those students both inspired me and taught me how to create this site. </br>
-      <br>
       I have million hobbies. A few of them are soccer, rock climbing, the struggle that is learning new languages, and mountain biking.
       </br>
       </p>
