--- a/home.html
+++ b/home.html
@@ -20,16 +20,17 @@
       <br>
       <br>
       Right now I'm working as an backend software engineer in Denver, CO. 
-          </br>
+      </br>
       <br>
       I also host a weekly coffee shop meetup called "Deep Learning in Denver", where I try to replicate the incredible programming meetups that taught me so much in New York City from 2017-2020. 
       </br>
       <br>
-   Before my stint in NYC, I worked as an economist for almost four years in Washington D.C, and I still feel like one at heart.</br>
+      Before my stint in NYC, I worked as an economist for almost four years in Washington D.C, and I still feel like one at heart.
       </br>
       <br>
       Shoutout to the <a href="https://codenation.org/">Code Nation</a> Lower East Side high schoolers - Working with those students both inspired me and taught me how to create this site. 
-</br>
+      </br>
+      <br>
       I have million hobbies. A few of them are soccer, rock climbing, the struggle that is learning new languages, and mountain biking.
       </br>
       </p>
