--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
       Shoutout to the <a href="https://codenation.org/">Code Nation</a> Lower East Side high schoolers - Working with those students both inspired me and taught me how to create this site. 
       </br>
       <br>
-      I have million hobbies. A few of them are soccer, rock climbing, the struggle that is learning new languages, and mountain biking.
+      I have million hobbies. A few of them are soccer, rock climbing, the struggle that is learning new languages, and mountain/road biking.
       </br>
       </p>
       <br> 
