--- a/book_quotes/authenically_black.html
+++ b/book_quotes/authenically_black.html
@@ -3,7 +3,12 @@
 <head>
   <title> Johanna Fulghum </title>
   <link rel="stylesheet" type="text/css" href="style.css" />
-  <link href="https://fonts.googleapis.com/css?family=Gelasio|Ibarra+Real+Nova&display=swap" rel="stylesheet">
+
+<style>
+body {background-color: powderblue;}
+h1   {color: blue;}
+p    {color: red;}
+</style>
 
 </head>
 <body>
