--- a/book_quotes/authenically_black.html
+++ b/book_quotes/authenically_black.html
@@ -5,9 +5,18 @@
   <link rel="stylesheet" type="text/css" href="style.css" />
 
 <style>
-body {background-color: powderblue;}
-h1   {color: blue;}
-p    {color: red;}
+body {
+  background-color: powderblue
+  }
+h1 {
+  padding-left: 55px;
+  padding-right: 35px
+  }
+p {
+  padding-left: 45px;
+  margin: 0
+  }
+ 
 </style>
 
 </head>
