--- a/book_quotes/authenically_black.html
+++ b/book_quotes/authenically_black.html
@@ -5,9 +5,8 @@
   <link rel="stylesheet" type="text/css" href="style.css" />
 
 <style>
-body {
-  background-color: powderblue
-  }
+  
+body {background-color: #F5E1FD;}
 h1 {
   padding-left: 55px;
   padding-right: 35px
