--- a/book_quotes/authenically_black.html
+++ b/book_quotes/authenically_black.html
@@ -8,12 +8,14 @@
 body {
   background-color: #F5E1FD;
   }
-h1 {
+/* h1 {
   padding-left: 55px;
   padding-right: 35px
-  }
+  } */
 p {
   padding-left: 45px;
+  padding-right: 35px;
+  margin-right: 100px;
   margin: 0
   }
  
@@ -22,7 +24,7 @@ p {
 
 
 <body>
-<h1>
+<!-- <h1> -->
 <p>
 
 Current work in anthropology, however, shows us that the reason most West Africans (or many other of the world’s peoples) had not created the kind of “civilizations” that Europeans had was largely an accident of geography. The plants and animals thriving on a particular temperate latitude were uniquely amenable to cultivation, naturally yielding a volume of surplus that swelled populations, thus in turn facilitating densely hierarchical societies where certain classes had the leisure to create technology.
@@ -45,6 +47,6 @@ Pushing it? Maybe. But what are we to make of various university officials’ ap
 Authenticity Black by John McWhorter </li>
 
 </p>
-</h1> 
+<!-- </h1>  -->
 </body>
 
