--- a/book_quotes/authenically_black.html
+++ b/book_quotes/authenically_black.html
@@ -11,8 +11,8 @@ body {
 
 p {
   padding-left: 45px;
-  padding-right: 35px;
-  margin-right: 100px;
+  padding-right: 235px;
+/*   margin-right: 100px; */
 /*   margin: 0 */
   }
  
