--- a/book_quotes/narrative.html
+++ b/book_quotes/narrative.html
@@ -1,6 +1,34 @@
+<!doctype html>
+<head>
+  <title> Johanna Fulghum </title>
+  <link rel="stylesheet" type="text/css" href="style.css" />
+
+<style>
+body {
+  background-color: #F5E1FD;
+  }
+
+p {
+  padding-top: 75px;
+  padding-left: 55px;
+  padding-right: 465px;
+  }
+ 
+</style>
+</head>
 
 
+<body>
 
-
+<p>
 I prefer to be true to myself, even at the hazard of incurring the ridicule of others, rather than to be false, and to incur my own abhorrence.
+<br>
+<br>
+<br>
 - Frederick Douglass , Narrative of the Life of Frederick Douglass
+
+</p>
+</body>
+
+
+
