--- a/book_quotes/bad_man.html
+++ b/book_quotes/bad_man.html
@@ -1,7 +1,43 @@
-“Sometimes I looked at her sleeping face, the living flesh of it, and was overwhelmed by how precarious it was to love a living thing. She could die simply from lack of water. It hardly seemed safer than falling in love with a plant.”
-― Miranda July, The First Bad Man
+<!doctype html>
+<head>
+  <title> Johanna Fulghum </title>
+  <link rel="stylesheet" type="text/css" href="style.css" />
 
+<style>
+body {
+  background-color: #F5E1FD;
+  }
+
+p {
+  padding-top: 75px;
+  padding-left: 55px;
+  padding-right: 465px;
+  }
+ 
+</style>
+</head>
+
+
+<body>
+
+  <p>
+
+
+
+“Sometimes I looked at her sleeping face, the living flesh of it, and was overwhelmed by how precarious it was to love a living thing. She could die simply from lack of water. It hardly seemed safer than falling in love with a plant.”
+<br>
+<br>
+― Miranda July, The First Bad Man
+<br>
+<br>
+<br>
+<br>
 
 
 “Then one night I woke at three A.M. certain he was rotting like a chicken carcass. Only as I lowered him into the sink did I realize this was a crazy time to wash a baby and I began to cry because he was so trusting—I could do anything and he would go along with it, the little fool.”
+<br>
+<br>
 ― Miranda July, The First Bad Man
+
+</p>
+</body>
