--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
       I also host a weekly coffee shop meetup called "Deep Learning in Denver", where I try to replicate the incredible programming meetups that taught me so much in New York City from 2017-2020. 
       </br>
       <br>
-      Before my stint in NYC, I worked for almost four years in Washington D.C. as an economist, and I still feel like one at heart.
+      Before my stint in NYC, I worked in Washington D.C. for almost four years as an economist, and I still feel like one at heart.
       </br>
       <br>
       Shoutout to the <a href="https://codenation.org/">Code Nation</a> Lower East Side high schoolers - Working with those students both inspired me and taught me how to create this site. 
