--- a/home.html
+++ b/home.html
@@ -16,22 +16,14 @@
    <div>
    <h2>Welcome.</h2>
    <div class="intro">
-      <p>My name is Johanna Fulghum. One day in January 2020 I was feeling so inspired by Susan Fowler's <a href="https://www.susanrigetti.com/reading-list">reading list</a> that I decided to create my <a href="http://johannafulghum.com/">own.</a>
+      <p>Hi! My name is Johanna Fulghum. I am a deep learning and machine learning engineer, specializing in Natural Language. I love languages, both human and computer. 
       <br>
-      <br>
-      Right now I'm working as an backend software engineer in Denver, CO. 
+      I <a href="http://johannafulghum.com/">read</a>, play and work in Denver, CO, currently working as an backend software engineer writing APIs in Python. I also love to travel, most recently on bike trips to Romania, Colombia and Albania.
       </br>
       <br>
-      I also host a weekly coffee shop meetup called "Deep Learning in Denver", where I try to replicate the incredible programming meetups that taught me so much in New York City from 2017-2020. 
+      I also host a <a href="https://www.meetup.com/deep-learning-in-denver-study-lab/"> weekly coffee shop meetup </a> called "Deep Learning in Denver". If you are in town, please stop by!
       </br>
-      <br>
-      Before my stint in NYC, I worked in Washington D.C. for almost four years as an economist, and economic thinking still feels core to me at heart.
-      </br>
-      <br>
-      Shoutout to the <a href="https://codenation.org/">Code Nation</a> Lower East Side high schoolers - Working with those students both inspired me and taught me how to create this site. 
-      </br>
-      <br>
-      I have million hobbies. A few of them are soccer, rock climbing, the struggle that is learning new languages, and mountain/road biking.
+    
       </br>
       </p>
       <br> 
