--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
    <div>
    <h2>Welcome.</h2>
    <div class="intro">
-      <p>Hi! My name is Johanna Fulghum. I am a deep learning and machine learning engineer, specializing in Natural Language. I love languages, both human and computer. 
+      <p>Hi! My name is Johanna Fulghum. I am a deep learning and machine learning engineer, specializing in Natural Language. I love languages and am currently focusing on improving my Spanish and ASL. 
       <br>
       I <a href="http://johannafulghum.com/">read</a>, play and work in Denver, CO, currently working as an backend software engineer writing APIs in Python. I also love to travel, most recently on bike trips to Romania, Colombia and Albania.
       </br>
