--- a/home.html
+++ b/home.html
@@ -16,9 +16,13 @@
    <div>
    <h2>Welcome.</h2>
    <div class="intro">
-      <p>Hi! My name is Johanna Fulghum. I am a deep learning and machine learning engineer, specializing in Natural Language. I love languages and am currently focusing on improving my Spanish and ASL. 
-      <br>
-      I <a href="http://johannafulghum.com/">read</a>, play and work in Denver, CO, currently working as an backend software engineer writing APIs in Python. I also love to travel, most recently on bike trips to Romania, Colombia and Albania.
+      <p>Hi! My name is Johanna Fulghum. I am a deep learning and machine learning engineer, specializing in Natural Language. 
+      <br><br>
+      I love languages and am currently focusing on improving my Spanish and ASL. 
+      <br><br>
+      I <a href="http://johannafulghum.com/">read</a>, play and work in Denver, CO, currently working as an backend software engineer writing APIs in Python. 
+      <br><br>
+      I also love to travel, most recently on bike trips to Romania, Colombia and Albania.
       </br>
       <br>
       I also host a <a href="https://www.meetup.com/deep-learning-in-denver-study-lab/"> weekly coffee shop meetup </a> called "Deep Learning in Denver". If you are in town, please stop by!
