--- a/book_quotes/dorian.html
+++ b/book_quotes/dorian.html
@@ -1,5 +1,38 @@
+<!doctype html>
+<head>
+  <title> Johanna Fulghum </title>
+  <link rel="stylesheet" type="text/css" href="style.css" />
+
+<style>
+body {
+  background-color: #F5E1FD;
+  }
+
+p {
+  padding-top: 75px;
+  padding-left: 55px;
+  padding-right: 465px;
+  }
+ 
+</style>
+</head>
+
+
+<body>
+
+  <p>
+
+
+
 "Stop, Gray. [...]
 I entirely decline to be mixed up in your life. Keep your horrible secrets to yourself. 
 They don’t interest me any more.”
 
 - The Picture of Dorian Gray
+    
+ 
+</p>
+</body>
+
+
+
