--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <a class="nav-bar" href="https://jfulghum.github.io/writing/home.html">Home</a> 
   <a class="nav-bar"href="https://jfulghum.github.io/writing/games.html">Games</a> 
   <a class="nav-bar"href="https://jfulghum.github.io/writing/medium.html">Writing</a> 
-  <a class="nav-bar"href="https://jfulghum.github.io/deep_learning_writing/">On Deep Learning</a> (in progress)
+  <a class="nav-bar"href="https://jfulghum.github.io/deep_learning_writing/">On Deep Learning</a>
   <a class="nav-bar"href="https://jfulghum.github.io/writing/">Reading List</a>
   <a class="nav-bar"href="https://jfulghum.github.io/writing/quotes.html">Favorite Quotes</a>
 </div>
