--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
    <div>
    <h2>Welcome.</h2>
    <div class="intro">
-      <p>Hi! My name is Johanna Fulghum. I am an aspiring deep learning and machine learning engineer, specializing in Natural Language. 
+      <p>Hi! My name is Johanna Fulghum.
       </br>
       <br>
       I love languages and am currently focusing on improving my Spanish and ASL. 
