--- a/home.html
+++ b/home.html
@@ -25,10 +25,10 @@
       I <a href="http://johannafulghum.com/">read</a>, play and work in Denver, CO, currently working as an backend software engineer writing APIs in Python. 
       </br>
       <br>
-      I also love to travel, most recently on bike trips to Romania, Colombia and Albania.
+      I love to travel, most recently on bike trips to Romania, Colombia and Albania.
       </br>
       <br>
-      I also host a <a href="https://www.meetup.com/deep-learning-in-denver-study-lab/"> weekly coffee shop meetup </a> called "Deep Learning in Denver". If you are in town, please stop by!
+      I host a <a href="https://www.meetup.com/deep-learning-in-denver-study-lab/"> weekly coffee shop meetup </a> called "Deep Learning in Denver". If you are in town, please stop by!
       </br>
     
       </br>
