--- a/book_quotes/sexandrage.html
+++ b/book_quotes/sexandrage.html
@@ -1,5 +1,38 @@
-"Jacaranda realized that no matter where Max was sitting, what hotel, in what city - or when, he would forever feel like home. He was a tango partner whom after an absence of forty years, she would remember perfectly, even if she was blind."
+<!doctype html>
+<head>
+  <title> Johanna Fulghum </title>
+  <link rel="stylesheet" type="text/css" href="style.css" />
+
+<style>
+body {
+  background-color: #F5E1FD;
+  }
+
+p {
+  padding-top: 75px;
+  padding-left: 55px;
+  padding-right: 665px;
+  }
+ 
+</style>
+</head>
+
+
+<body>
+
+  <p>
+
+Jacaranda realized that no matter where Max was sitting, what hotel, in what city - or when, he would forever feel like home. He was a tango partner whom after an absence of forty years, she would remember perfectly, even if she was blind."
+    <br>
+    <br>
+
+Every time between Max and Jacaranda was different, but it was always a tango, and the tango is not a dance that lends itself to much beyond sex and rage. The tango is a embrace popular among sowers of wild oats who regret nothing.
+
+
+<br>
+<br>
 - Sex and Rage, by Eve Babitz
 
-"Every time between Max and Jacaranda was different, but it was always a tango, and the tango is not a dance that lends itself to much beyond sex and rage. The tango is a embrace popular among sowers of wild oats who regret nothing."
-- Sex and Rage, by Eve Babitz
+
+</p>
+</body>
