--- a/book_quotes/sexandrage.html
+++ b/book_quotes/sexandrage.html
@@ -22,7 +22,7 @@ p {
 
   <p>
 
-Jacaranda realized that no matter where Max was sitting, what hotel, in what city - or when, he would forever feel like home. He was a tango partner whom after an absence of forty years, she would remember perfectly, even if she was blind.
+Jacaranda realized that no matter where Max was sitting - what hotel, in what city - or when, he would forever feel like home. He was a tango partner whom after an absence of forty years, she would remember perfectly, even if she was blind.
     <br>
     <br>
 
