--- a/book_quotes/thecreativeact.html
+++ b/book_quotes/thecreativeact.html
@@ -1,18 +1,51 @@
-Some things are too important to be taken seriously- Oscar Wilde 
+<!doctype html>
+<head>
+  <title> Johanna Fulghum </title>
+  <link rel="stylesheet" type="text/css" href="style.css" />
 
+<style>
+body {
+  background-color: #F5E1FD;
+  }
+
+p {
+  padding-top: 75px;
+  padding-left: 55px;
+  padding-right: 665px;
+  }
+ 
+</style>
+</head>
+
+
+<body>
+
+  <p>
+
+Some things are too important to be taken seriously - Oscar Wilde 
+<br>
 Value your own voice. The goal is not to be like others. The goal is to amplify the differences.
-
+<br>
 To listen impatiently is to hear nothing at all.
-
+<br>
 Strip away the labels. 🏷️ even simple ones may be doing more harm than good. Now how do you see the world? 
-
+<br>
 The goal is to live your life in service of art.
-
+<br>
 When making art, the audience comes last.
-
+<br>
+<br>
 Holding onto your work is like writing the same entry in a diary over and over again. 
 Each piece is not a total reflection of us. Only who we are in this moment. 
 There’s a timeliness to the work. 
 When you and the work are in sync, it’s time to put it out and move on. 
-
+<br>
+<br>
 There doesn’t need to be a purpose guiding what we choose to make. If we like what we are creating, we don’t have to know why. When we are making things we love, our mission is accomplished. There is nothing at all to figure out. ♥️ think to yourself, I’m just here to create.
+<br>
+<br>
+- The Creative Act, by Rick Rubin
+
+
+</p>
+</body>
