--- a/book_quotes/storewoman.html
+++ b/book_quotes/storewoman.html
@@ -1,3 +1,26 @@
+<!doctype html>
+<head>
+  <title> Johanna Fulghum </title>
+  <link rel="stylesheet" type="text/css" href="style.css" />
+
+<style>
+body {
+  background-color: #F5E1FD;
+  }
+
+p {
+  padding-top: 75px;
+  padding-left: 55px;
+  padding-right: 665px;
+  }
+ 
+</style>
+</head>
+
+
+<body>
+
+  <p>
 <p>
   When you work in a convenience store, people often look down on you for working there.
 <br>
@@ -7,3 +30,4 @@ I find this fancinating, and I like to look them in the face as they do this to 
 <br>
 And as I do so, I always think: that's what a human is. 
 </p>
+</body>
