--- a/book_quotes/storewoman.html
+++ b/book_quotes/storewoman.html
@@ -22,12 +22,15 @@ p {
 
   <p>
 <p>
-  When you work in a convenience store, people often look down on you for working there.
+When you work in a convenience store, people often look down on you for working there.
 <br>
 <br>
 I find this fancinating, and I like to look them in the face as they do this to me.
 <br>
 <br>
 And as I do so, I always think: that's what a human is. 
+<br>
+<br>
+  - Convenience Store Woman, by Sayaka Murata
 </p>
 </body>
