--- a/book_quotes/whodoyouthinkyouare.html
+++ b/book_quotes/whodoyouthinkyouare.html
@@ -1,1 +1,70 @@
 
+<!doctype html>
+<head>
+  <title> Johanna Fulghum </title>
+  <link rel="stylesheet" type="text/css" href="style.css" />
+
+<style>
+body {
+  background-color: #F5E1FD;
+  }
+
+p {
+  padding-top: 75px;
+  padding-left: 55px;
+  padding-right: 665px;
+  }
+ 
+</style>
+</head>
+
+
+<body>
+
+<p>
+"Flo was his [her father's] idea of what a woman ought to be. Rose knew that, and indeed he often said it. A woman ought to be energetic, practical, clever 
+  at making and saving; she ought to be shrewd, good at bargaining and bossing and seeing through people's pretensions. At the same time she 
+  should be naive intellectually, childlike, contemptuous of maps and long words and anything in books, full of charming jumbled notions, 
+  superstitions, traditional beliefs." <br>
+<br>
+<br>
+
+
+
+“Rose hated her at these times, hated her father as well; his sickness; the poverty or frugality that made it unthinkable for them to send things to the laundry; 
+  the way there was not a thing in their lives they were protected from. Flo was there to see to that.”
+
+<br>
+<br>
+ <br>
+<br>
+ <br>
+<br>
+
+<!-- Horse Nicholson had made a lot of money as a contractor and had left that to go into politics. He had made a speech saying that what they needed was a lot more God in the classroom and a lot less French. -->
+
+"They took along their own sandwiches and bought milk from the vendor on the train. It was sour. Sour chocolate milk.
+ Rose kept taking tiny sips, unwilling to admit that something so much desired could fail her.
+<br>
+...
+<br>
+Not a Frenchman at all, really, his name was McLaren, but Rose thought teaching French had rubbed off on him, made him look like one, 
+  Quick and sallow, sharp shoulders; hooked nose and sad eyes.
+She saw him lapping and coiling his way through slow pleasures, a perfect autocrat of iadulgences.
+<br>
+...
+<br>
+She had a considerable longing to be somebody's object.
+Pounded, pleasured, reduced, exhausted.
+<br>
+...
+<br>
+She never saw him again in her life. But he remained on call, so to speak, for years and years, ready to slip into place at a critical moment, 
+  without even any regard, later on, for husband or lovers."
+  <br>
+
+  - Alice Munro, Who Do You Think You Are? 
+<br>
+
+</p>
+</body>
