--- a/book_quotes/whodoyouthinkyouare.html
+++ b/book_quotes/whodoyouthinkyouare.html
@@ -50,11 +50,10 @@ p {
 <br>
 Not a Frenchman at all, really, his name was McLaren, but Rose thought teaching French had rubbed off on him, made him look like one, 
   Quick and sallow, sharp shoulders; hooked nose and sad eyes.
-She saw him lapping and coiling his way through slow pleasures, a perfect autocrat of iadulgences.
-<br>
-...
+She saw him lapping and coiling his way through slow pleasures, a perfect autocrat of indulgences.
 <br>
 She had a considerable longing to be somebody's object.
+  <br>
 Pounded, pleasured, reduced, exhausted.
 <br>
 ...
