--- a/book_quotes/justkids.html
+++ b/book_quotes/justkids.html
@@ -1,11 +1,40 @@
+<!doctype html>
+<head>
+  <title> Johanna Fulghum </title>
+  <link rel="stylesheet" type="text/css" href="style.css" />
+
+<style>
+body {
+  background-color: #F5E1FD;
+  }
+
+p {
+  padding-top: 75px;
+  padding-left: 55px;
+  padding-right: 665px;
+  }
+ 
+</style>
+</head>
+
+
+<body>
+
+<p>
+
 When we got to the part where we had to improvise an argument in a poetic language, I got cold feet. "I can't do this," I said. "I don't know what to say."
-
+<br>
 "Say anything," he said. "You can't make a mistake when you improvise."
-
+<br>
 "What if I mess it up? What if I screw up the rhythm?"
-
-"You can't," he said. "It's like drumming. If you miss a beat, you create another."
-
+<br>
+"You can't," he said. "It's like drummin'. If you miss a beat, you create another."
+<br>
 In this simple exchange, Sam taught me the secret of improvisation, one that I have accessed my whole life.
-
+<br>
+<br>
 ― Patti Smith, Just Kids
+
+</p>
+</body>
+
