--- a/book_quotes/whodoyouthinkyouare.html
+++ b/book_quotes/whodoyouthinkyouare.html
@@ -22,6 +22,12 @@ p {
 <body>
 
 <p>
+  
+<br>
+Learning to survive, no matter with what cravenness and caution, what shocks and forebodings, is not the same as being miserable. It is too interesting.
+<br>
+<br>
+  
 "Flo was his [her father's] idea of what a woman ought to be. Rose knew that, and indeed he often said it. A woman ought to be energetic, practical, clever 
   at making and saving; she ought to be shrewd, good at bargaining and bossing and seeing through people's pretensions. At the same time she 
   should be naive intellectually, childlike, contemptuous of maps and long words and anything in books, full of charming jumbled notions, 
