--- a/book_quotes/whodoyouthinkyouare.html
+++ b/book_quotes/whodoyouthinkyouare.html
@@ -24,8 +24,12 @@ p {
 <p>
   
 <br>
-Learning to survive, no matter with what cravenness and caution, what shocks and forebodings, is not the same as being miserable. It is too interesting.
+"Learning to survive, no matter with what cravenness and caution, what shocks and forebodings, is not the same as being miserable. It is too interesting."
 <br>
+<br>
+  <br>
+<br>
+  <br>
 <br>
   
 "Flo was his [her father's] idea of what a woman ought to be. Rose knew that, and indeed he often said it. A woman ought to be energetic, practical, clever 
