--- a/quotes.html
+++ b/quotes.html
@@ -50,9 +50,12 @@
     <div>
 <br> 
 <br> 
+ <div>
+   <p class="quote">
   "The best protection is always to be working on hard problems. Writing novels is hard. Reading novels isn't. Hard means worry: if you're not worrying that something you're making will come out badly, or that you won't be able to understand something you're studying, then it isn't hard enough. There has to be suspense.
 Well, this seems a grim view of the world, you may think. What I'm telling you is that you should worry? Yes, but it's not as bad as it sounds. It's exhilarating to overcome worries. You don't see faces much happier than people winning gold medals. And you know why they're so happy? Relief.
 I'm not saying this is the only way to be happy. Just that some kinds of worry are not as bad as they sound."
+ </div>
 <br> 
 <br> - Paul Graham, <a href="http://www.paulgraham.com/hs.htmll">What You'll Wish You'd Known</a>
   <br> 
