--- a/quotes.html
+++ b/quotes.html
@@ -57,7 +57,7 @@ Well, this seems a grim view of the world, you may think. What I'm telling you i
 I'm not saying this is the only way to be happy. Just that some kinds of worry are not as bad as they sound."
  
 <br> 
-<br> - Paul Graham, <a href="http://www.paulgraham.com/hs.htmll">What You'll Wish You'd Known</a>
+<br> - Paul Graham, <a href="http://www.paulgraham.com/hs.html">What You'll Wish You'd Known</a>
     </li></div>
   <br> 
       
